added more css for h2 and directions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,5 +8,15 @@
 
 body {
     background: linear-gradient(#ffff99, #ff99cc);
+    
 }
 
+
+
+.howto {
+    background-color: lavenderblush;
+}
+
+.directions {
+    background-color: lavenderblush;
+}
