--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,18 @@ body {
 .directions {
     background-color: lavenderblush;
 }
+
+.resize {
+    position: relative;
+    float: left;
+    width: 100px;
+    margin: 20px 0 25px;
+    overflow: auto;
+  }
+  
+  .resize img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+  }
+  
