--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,15 +18,28 @@ body {
     background-color: lavenderblush;
 }
 
+.total-score {
+    background-color: aliceblue;
+    position: relative;
+    float: right;
+    margin-top: -200px;
+}
+.wins-loses {
+    
+    width: 100px;
+    overflow: auto;
+    width: 80em;
+    margin-top: -200px;
+    
+}
 .resize {
     position: relative;
-    float: left;
     width: 100px;
     margin: 20px 0 25px;
     overflow: auto;
   }
   
-  .resize img {
+.resize img {
     width: 100%;
     border: 0 none;
     opacity: 0.8;
